--- a/src/app/trc-detalle/trc-detalle.page.html
+++ b/src/app/trc-detalle/trc-detalle.page.html
@@ -50,7 +50,7 @@
         </ion-col>
         <ion-col size="12" class="padding_espacio_descrip">
           <ion-row>
-            <ion-col *ngFor="let t of item.tags" size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
+            <ion-col *ngFor="let t of data.tags" size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
               <button class="btn_rojo_car">{{ t.nombre }}</button>
             </ion-col>
           </ion-row>
